--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+panther-launcher (1.3.0-Debian1) sid; urgency=low
+
+  * Added a frame around the launcher to better visually delimite it
+
+ -- Sergio Costas Rodriguez <raster@rastersoft.com>  Sun, 18 Oct 2015 23:55:00 +0200
+
 panther-launcher (1.2.0-Debian1) sid; urgency=low
 
   * It closes when pressing ESCAPE key
