--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+panther-launcher (1.5.0-Debian1) sid; urgency=low
+
+  * Added DBUS remote control
+
+ -- Sergio Costas Rodriguez <raster@rastersoft.com>  Sun, 06 Dec 2015 23:55:00 +0200
+
+panther-launcher (1.4.0-Debian1) sid; urgency=low
+
+  * Now Zeitgeist is really fully optional
+  * Now also installs the applet for gnome flashback
+
+ -- Sergio Costas Rodriguez <raster@rastersoft.com>  Sun, 22 Nov 2015 23:55:00 +0200
+
 panther-launcher (1.3.0-Debian1) sid; urgency=low
 
   * Added a frame around the launcher to better visually delimite it
