--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+panther_launcher (1.6.0-Debian1) sid; urgency=low
+
+  * Changes made
+
+ -- Sergio Costas <rastersoft@gmail.com>  Wed, 09 Dec 2015 23:16:01 +0100
+
 panther-launcher (1.5.0-Debian1) sid; urgency=low
 
   * Added DBus remote control and DBus activation support
