--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+panther-launcher (1.10.1-Debian1) sid; urgency=low
+
+  * Added compatibility with Gnome 3.20
+
+ -- Sergio Costas Rodriguez <raster@rastersoft.com>  Wed, 30 Mar 2016 23:55:00 +0200
+
 panther-launcher (1.10.0-Debian1) sid; urgency=low
 
   * Fixes a bug when moving the launcher to the bottom part
