--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+panther-launcher (1.12.0-Debian1) sid; urgency=low
+
+  * Added support for Mate Desktop (thanks to XRevan86)
+  * Added dependencies for needed icons
+
+ -- Sergio Costas Rodriguez <raster@rastersoft.com>  Sun, 25 Sep 2016 23:55:00 +0200
+
 panther-launcher (1.11.3-Debian1) sid; urgency=low
 
   * Allows to disable building the gnome-panel applet (useful for fedora users)
